v 2.1.0 - Not yet released
  * Fixed incorrect panel value calculation
  * Fixed crash when using Prototype.js with jQuery.noConflict
  * Improve picker positioning in small window (moved left or up, if necessary)
  * Documentation fixes
  * Updated to jQuery 1.10.2

v 2.0.0 - 28 Aug 2013
  * New color management module
  * Alpha support
  * Built-in side panel
  * Improved shadow rendering
  * Fixed IE mouse position bug
  * Updated to jQuery 1.9.1

v 1.1.0 - 16 Mar 2013
  * Configurable shadow color

v 1.0.1 - 24 Jan 2013
  * Improved Color.getTextColor() implementation according to BT 709 spec
  * Fixed calculations of the width of the hue selector
  * Changed default value for "ringwidth" property
  * New documentation page explaining widget dimensions
  * Documentation fixes

v 1.0.0 - 17 Jan 2013
  * Initial release