@@ -286,6 +286,9 @@ foreach ($properties as $key => $value) {
     );
 }
 
+$html .= '<p><strong>See also:</strong></p>';
+$html .= '<p><a href="./properties.html?target=eventPrefix">Properties - eventPrefix</a></p>';
+
 $html .= '</div>';
 $html .= '<div class="content-secondary">';
 $html .= '<nav>';
