@@ -2,6 +2,7 @@ v 2.1.0 - Not yet released
   * Fixed incorrect panel value calculation
   * Fixed crash when using Prototype.js with jQuery.noConflict
   * Improve picker positioning in small window (moved left or up, if necessary)
+  * Added "eventPrefix" property
   * Documentation fixes
   * Updated to jQuery 1.10.2
 
